# chatgpt-plugin

./: .env.template  .gitignore  README.md  package.json  pyproject.toml
.well-known/: ai-plugin.json  openapi.yaml
.well-known-dev/: ai-plugin.json  openapi.yaml
chatgpt-plugin/: .env.template  next.config.js  package.json
chatgpt-plugin/public/: ai-plugin.json  openapi.yaml
chatgpt-plugin/public/.well-known/: ai-plugin.json
chatgpt-plugin/src/app/: globals.css  index.tsx  layout.tsx  page.tsx
chatgpt-plugin/src/app/hyperspace/: account.ts  constants.ts
chatgpt-plugin/src/app/hyperspace/idl/: hyperspace.ts
chatgpt-plugin/src/lib/: address.ts  features.ts  features.tsx  middleware.ts
chatgpt-plugin/src/lib/helloMoon/: index.ts
chatgpt-plugin/src/lib/on-chain-metadata/: index.ts
chatgpt-plugin/src/pages/: index.tsx
chatgpt-plugin/src/pages/.well-known-old/: [file].ts
chatgpt-plugin/src/pages/api/: constants.ts  index.ts
langchain_examples/: README.md
langchain_examples/python/: main.py  plugintool.py
scripts/: alter_send.ts  createNFTCollection.ts  createTree.ts  helper.ts  runCreateCollection.ts  runCreateNFTCollection.ts  send.ts  uploadCNFTMetadata.ts  uploadMetadata.ts
src/: index.ts
src/handlers/getAssetsByOwner/: index.ts
src/handlers/getBalance/: index.ts
src/handlers/getListedCollectionNFTs/: index.ts
src/handlers/getTokenAccounts/: index.ts
src/handlers/transaction-handlers/: index.ts
src/handlers/transaction-handlers/createTranferSol/: index.ts
src/handlers/transaction-handlers/createTransferToken/: index.ts
(+69 files in other folders)
